<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".news">

    <LinearLayout
        android:layout_width="490dp"
        android:layout_height="585dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="342dp"
                android:layout_height="62dp"
                android:layout_marginStart="-140sp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_developer_mode_black_24dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/techno_news"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:background="@drawable/banner"
                android:contentDescription="@string/bann" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/gambar"
            android:contentDescription="@string/gg" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>